@@ -1151,6 +1151,67 @@ EOL
   end
 
 
+  def test_pretty_format_deep_indent
+    n = 6
+    elements = ""
+    n.times do |i|
+      elements << "<element#{i}>"
+      elements << "element#{i} " * 5
+    end
+    (n - 1).downto(0) do |i|
+      elements << "</element#{i}>"
+    end
+    xml = "<doc>#{elements}</doc>"
+    document = REXML::Document.new(xml)
+    formatter = REXML::Formatters::Pretty.new
+    formatter.width = 20
+    output = ""
+    formatter.write(document, output)
+    assert_equal(<<-XML.strip, output)
+<doc>
+  <element0>
+    element0
+    element0
+    element0
+    element0
+    element0 
+    <element1>
+      element1
+      element1
+      element1
+      element1
+      element1 
+      <element2>
+        element2
+        element2
+        element2
+        element2
+        element2 
+        <element3>
+          element3
+          element3
+          element3
+          element3
+          element3 
+          <element4>
+            element4
+            element4
+            element4
+            element4
+            element4
+            
+            <element5>
+              element5 element5 element5 element5 element5 
+            </element5>
+          </element4>
+        </element3>
+      </element2>
+    </element1>
+  </element0>
+</doc>
+    XML
+  end
+
   def test_ticket_58
     doc = REXML::Document.new
     doc << REXML::XMLDecl.default
